--- a/fotografia/naturaleza.html
+++ b/fotografia/naturaleza.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>GHM - Biografía Huevo</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/huevo.css">
+	<title>GHM - Fotografía Naturaleza</title>
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/huevo.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -14,7 +14,7 @@
 			<div class="container">
 				
 				<!-- Logo de GHM -->
-				<a class="ghmLogo" href="index.html">
+				<a class="ghmLogo" href="../index.html">
 					<span class="icon-logo"></span>
 				</a>
 				<!-- Fin de Logo -->
@@ -45,14 +45,14 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA</a>
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
-					        	<a class="dropdown-item" href="fotografia/naturaleza.html">Naturaleza</a>
-					        	<a class="dropdown-item" href="#">Institucional</a>
-					        	<a class="dropdown-item" href="#">Infraestructura</a>
-					        	<a class="dropdown-item" href="#">Artístico</a>
-					        	<a class="dropdown-item" href="#">Extremo</a>
-					        	<a class="dropdown-item" href="#">Publicitaria</a>
-					        	<a class="dropdown-item" href="#">Retrato</a>
-					        	<a class="dropdown-item" href="#">Producciones en estudio</a>
+					        	<a class="dropdown-item" href="#">Naturaleza</a>
+					        	<a class="dropdown-item" href="#.">Institucional</a>
+					        	<a class="dropdown-item" href="#.">Infraestructura</a>
+					        	<a class="dropdown-item" href="#.">Artístico</a>
+					        	<a class="dropdown-item" href="#.">Extremo</a>
+					        	<a class="dropdown-item" href="#.">Publicitaria</a>
+					        	<a class="dropdown-item" href="#.">Retrato</a>
+					        	<a class="dropdown-item" href="#.">Producciones en estudio</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -89,65 +89,88 @@
 	</header>
 	
 	<div>
-		<img src="img/BIOGRAFIA-HUEVO-01.jpg" class="img-fluid">
-	</div>
-
-	<div class="container bio">
-		<div class="row justify-content-center">
-			<div class="col-12 col-lg-10 text-center">
-				<h1 class="titulo">Gustavo Muñoz Lorenzo</h1>
-				<p class="texto">Gustavo Muñoz Lorenzo o “Huevo”, como lo conocen algunos, nació el 13 de mayo de 1973. Fotógrafo y camarógrafo, desempeña su profesión alternando sus tareas como director de ghm contenidos, empresa que fundó en 1993. En sus más de veinte años de trayectoria, ha incursionado en televisión, la realización audiovisual y editorial.<br>Tres veces ganador del FUND TV, ha sido premiado en diferentes festivales nacionales e internacionales como el “Festival Internacional de Cine de Montaña” y el “BANFF Mountain Film Festival”, entre otros.</p>
-			</div>
-		</div>
+		<img src="../img/FOTOGRAFIA-NATURALEZA-01.jpg" class="img-fluid">
 	</div>
 
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-02.jpg" class="img-fluid" alt="Cabo de Hornos">
 			</div>
 			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-		</div>
-		<div class="row align-items-center">
-			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
+				<h2 class="titulo">Cabo de Hornos</h2>
+				<p class="texto">Es una de las Islas Wollaston de Chile, que forman parte del archipiélago de Tierra del Fuego. Para los marinos navegar en ella es uno de los desafíos más grandes.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
+				<h2 class="titulo">Cerro Fitz Roy, Santa Cruz</h2>
+				<p class="texto">Con 3.405 metros de altura, el cerro Fitz Roy aparece como una de las montañas más difíciles de escalar del mundo.</p>
 			</div>
 			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-		</div>
-		<div class="row align-items-center">
-			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-03.jpg" class="img-fluid" alt="Cerro Fitz Roy">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-04.jpg" class="img-fluid" alt="Perú">
 			</div>
 			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
+				<h2 class="titulo">Perú</h2>
+				<p class="texto">En Perú no hace falta ir hasta el campo para ver llamas, alpacas, guanacos y vicuñas; incluso circulan por pleno centro de Cusco.</p>
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-6 div-sp">
+				<h2 class="titulo">Camisea, Perú</h2>
+				<p class="texto">Lorem ipsum dolor sit.Uno de los proyectos que desarrolló la empresa Techint en Perú que consistía en la construcción y tendido de ductos de gas natural.</p>
+			</div>
+			<div class="col-6 div-sp">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-05.jpg" class="img-fluid" alt="Camisea, Perú">
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-6 div-sp">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-06.jpg" class="img-fluid">
+			</div>
+			<div class="col-6 div-sp">
+				<h2 class="titulo">Tren a las Nubes, Salta</h2>
+				<p class="texto">El tren parte de la ciudad de Salta, atraviesa el Valle de Lerma para introducirse en la Quebrada del Toro y llegar hasta la Puna de Atacama, llegando a más de 4220 msnm de altura.</p>
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-6 div-sp">
+				<h2 class="titulo">La Trochita, Chubut</h2>
+				<p class="texto">Conocido como el Viejo Expreso Patagónico, realiza un servicio turístico entre Esquel y Nahuel Pan y periódicamente hasta El Maitén.</p>
+			</div>
+			<div class="col-6 div-sp">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-07.jpg" class="img-fluid" alt="Camisea, Perú">
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-6 div-sp">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-08.jpg" class="img-fluid">
+			</div>
+			<div class="col-6 div-sp">
+				<h2 class="titulo">Reserva de biósfera San Guillermo, San Juan</h2>
+				<p class="texto">Ubicado en el departamento de Iglesia, tiene el fin de preservar sus características naturales y culturales.</p>
+			</div>
+		</div>
+		<div class="row align-items-center">
+			<div class="col-6 div-sp">
+				<h2 class="titulo">Valle de Los Patos, San Juan</h2>
+				<p class="texto">Camino que eligió el Gral. San Martín para atravesar la Cordillera, y donde actualmente se realiza la expedición del Cruce de los Andes.</p>
+			</div>
+			<div class="col-6 div-sp">
+				<img src="../img/FOTOGRAFIA-NATURALEZA-09.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 	</div>
+
+
+
+
+
 	<!-- Footer -->
 	<footer>
 		<div class="container">
@@ -155,8 +178,8 @@
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<h6 class="titulo-footer">Home</h6>
 					<ul class="lista-footer">
-						<li><a class="item-footer" href="index.html">Acerca de GHM</a></li>
-						<li><a class="item-footer" href="#">Gustavo Muñoz Lorenzo</a></li>
+						<li><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
 						<li><a class="item-footer" href="#.">Equipo</a></li>
 						<li><a class="item-footer" href="#.">Clientes</a></li>
 						<li><a class="item-footer" href="#.">Noticias</a></li>
@@ -174,7 +197,7 @@
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<h6 class="titulo-footer">Fotografía</h6>
 					<ul class="lista-footer">
-						<li><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
+						<li><a class="item-footer" href="#">Naturaleza</a></li>
 						<li><a class="item-footer" href="#.">Institucional</a></li>
 						<li><a class="item-footer" href="#.">Infraestructura</a></li>
 						<li><a class="item-footer" href="#.">Artístico</a></li>
@@ -227,7 +250,7 @@
 			</div>
 			<div class="row">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<a href="index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
+					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
@@ -235,9 +258,9 @@
 
 
 
-	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../js/popper.min.js"></script>
+	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../js/scripts.js"></script>
 </body>
 </html>
