--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA</a>
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
-					        	<a class="dropdown-item" href="#">Naturaleza</a>
+					        	<a class="dropdown-item" href="fotografia/naturaleza.html">Naturaleza</a>
 					        	<a class="dropdown-item" href="#">Institucional</a>
 					        	<a class="dropdown-item" href="#">Infraestructura</a>
 					        	<a class="dropdown-item" href="#">Artístico</a>
@@ -427,7 +427,7 @@
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<h6 class="titulo-footer">Fotografía</h6>
 					<ul class="lista-footer">
-						<li><a class="item-footer" href="#.">Naturaleza</a></li>
+						<li><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
 						<li><a class="item-footer" href="#.">Institucional</a></li>
 						<li><a class="item-footer" href="#.">Infraestructura</a></li>
 						<li><a class="item-footer" href="#.">Artístico</a></li>
