php primera prueba

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a href="#" class="nav-link dropdown-toggle" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA</a>
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
 					        	<a class="dropdown-item" href="fotografia/naturaleza.html">Naturaleza</a>
-					        	<a class="dropdown-item" href="#">Institucional</a>
+					        	<a class="dropdown-item" href="fotografia/institucional.html">Institucional</a>
 					        	<a class="dropdown-item" href="#">Infraestructura</a>
 					        	<a class="dropdown-item" href="#">Artístico</a>
 					        	<a class="dropdown-item" href="#">Extremo</a>
