--- a/fotografia/naturaleza.html
+++ b/fotografia/naturaleza.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>GHM - Fotografía Naturaleza</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/huevo.css">
+	<link rel="stylesheet" type="text/css" href="../css/naturaleza.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
