--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
 	</section>
 
 	<!-- Mapa -->
-	<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3400.501456166583!2d-68.5625626852397!3d-31.537849981363834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9681404df64be35f%3A0x2d3fc6fb19bffb93!2sghm+contenidos!5e0!3m2!1ses-419!2sar!4v1510436185485" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<div class="mapa">
+		<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3400.501456166583!2d-68.5625626852397!3d-31.537849981363834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9681404df64be35f%3A0x2d3fc6fb19bffb93!2sghm+contenidos!5e0!3m2!1ses-419!2sar!4v1510436185485" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
 
 	<!-- Footer -->
 	<footer>
@@ -462,7 +464,7 @@
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<h6 class="titulo-footer">Nuestra oficina</h6>
 					<ul class="lista-footer">
-						<li class="item-footer">Esteban Echeverría 772 Sur (5400)</li>
+						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
 						<li class="item-footer">San Juan · Argentina</li>
 						<li class="item-footer">+54 264 4266621 | 4085014</li>
 						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
