Ajustando detalles de diseño

--- a/huevo.html
+++ b/huevo.html
@@ -10,6 +10,15 @@
 <body>
 	<!-- Header -->
 	<header class="container-fluid">
+		<div class="container lang-container d-none d-lg-block">
+			<div class="row">
+				<div class="col-2 text-right ml-auto">
+					<button id="langEsp" class="lang active">ESP</button>
+					<span class="lang">/</span>
+					<button id="langEng" class="lang">ENG</button>
+				</div>
+			</div>
+		</div>
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				
@@ -39,7 +48,7 @@
 					        	<a class="dropdown-item" href="#.">Infraestructura</a>
 					        	<a class="dropdown-item" href="#.">Educativo</a>
 					        	<a class="dropdown-item" href="#.">Publicitario</a>
-					        	<a class="dropdown-item" href="#.">Mappig</a>
+					        	<a class="dropdown-item" href="#.">Mapping</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
