--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
 	<!-- Header -->
 	<header class="container-fluid">
+		<div class="container lang-container d-none d-lg-block">
+			<div class="row">
+				<div class="col-2 text-right ml-auto">
+					<button id="langEsp" class="lang active">ESP</button>
+					<span class="lang">/</span>
+					<button id="langEng" class="lang">ENG</button>
+				</div>
+			</div>
+		</div>
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				
@@ -39,7 +48,7 @@
 					        	<a class="dropdown-item" href="#.">Infraestructura</a>
 					        	<a class="dropdown-item" href="#.">Educativo</a>
 					        	<a class="dropdown-item" href="#.">Publicitario</a>
-					        	<a class="dropdown-item" href="#.">Mappig</a>
+					        	<a class="dropdown-item" href="#.">Mapping</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -119,15 +128,31 @@
 	<section class="videos">
 		<div class="video1">
 			<img src="img/video.png" class="img-fluid">
+			<div class="noticia">
+				<h6 class="titulo">Lorem ipsum #1.</h6>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quo suscipit labore molestias itaque, et vel aspernatur qui in nam rem recusandae officia soluta assumenda voluptatem quia sunt eius autem ea obcaecati molestiae id excepturi repudiandae iusto tempora. Alias ratione, accusantium mollitia possimus, sed minima cupiditate ducimus doloremque deleniti quod earum voluptatibus numquam nihil ipsam enim, porro sint hic.</p>
+			</div>
 		</div>
 		<div class="video2">
 			<img src="img/video.png" class="img-fluid">
+			<div class="noticia">
+				<h6 class="titulo">Lorem ipsum #2.</h6>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatibus repellendus ipsum illum soluta nesciunt id, harum maxime est voluptas necessitatibus facere impedit fugit, quas unde doloremque. Placeat, numquam. Iure quasi quis vitae sunt asperiores dolor dolore, quia amet voluptate molestias, rem libero magni. Vitae nesciunt accusamus, asperiores dolore voluptate..</p>
+			</div>
 		</div>
 		<div class="video3">
 			<img src="img/video.png" class="img-fluid">
+			<div class="noticia">
+				<h6 class="titulo">Lorem ipsum #3.</h6>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolorum alias, commodi in voluptatum quis magnam deserunt velit. Ipsum, quasi id quo ipsam vel inventore, magni maxime, mollitia odit eaque autem, nam eligendi nemo non dolores repellat eos laborum modi porro. Aliquam corrupti dolorum ad repudiandae tempore neque incidunt sunt, accusantium provident aliquid aut, exercitationem, nostrum molestiae, alias dignissimos expedita repellendus deserunt laboriosam voluptate doloremque qui quas eaque rerum..</p>
+			</div>
 		</div>
 		<div class="video4">
 			<img src="img/video.png" class="img-fluid">
+			<div class="noticia">
+				<h6 class="titulo">Lorem ipsum #4.</h6>
+				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eaque quae accusantium, omnis voluptatum fuga tempora nam adipisci pariatur aliquam. Incidunt quae facere quisquam magnam placeat iste consequatur tenetur quam aspernatur sapiente provident non architecto voluptatibus reiciendis voluptatum numquam illo eum, qui amet similique error quidem odio fugit? Dolor molestiae nesciunt maiores aperiam, amet odio sequi fugiat..</p>
+			</div>
 		</div>
 	</section>
 	<div class="clear"></div>
@@ -494,5 +519,6 @@
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
+
 </body>
 </html>
