--- a/fotografia/naturaleza.html
+++ b/fotografia/naturaleza.html
@@ -4,12 +4,21 @@
 	<meta charset="UTF-8">
 	<title>GHM - Fotografía Naturaleza</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/naturaleza.css">
+	<link rel="stylesheet" type="text/css" href="../css/fotografia.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 	<!-- Header -->
 	<header class="container-fluid">
+		<div class="container lang-container d-none d-lg-block">
+			<div class="row">
+				<div class="col-2 text-right ml-auto">
+					<button id="langEsp" class="lang active">ESP</button>
+					<span class="lang">/</span>
+					<button id="langEng" class="lang">ENG</button>
+				</div>
+			</div>
+		</div>
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				
@@ -39,7 +48,7 @@
 					        	<a class="dropdown-item" href="#.">Infraestructura</a>
 					        	<a class="dropdown-item" href="#.">Educativo</a>
 					        	<a class="dropdown-item" href="#.">Publicitario</a>
-					        	<a class="dropdown-item" href="#.">Mappig</a>
+					        	<a class="dropdown-item" href="#.">Mapping</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -123,7 +132,7 @@
 		<div class="row align-items-center">
 			<div class="col-6 div-sp">
 				<h2 class="titulo">Camisea, Perú</h2>
-				<p class="texto">Lorem ipsum dolor sit.Uno de los proyectos que desarrolló la empresa Techint en Perú que consistía en la construcción y tendido de ductos de gas natural.</p>
+				<p class="texto">Uno de los proyectos que desarrolló la empresa Techint en Perú que consistía en la construcción y tendido de ductos de gas natural.</p>
 			</div>
 			<div class="col-6 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-05.jpg" class="img-fluid" alt="Camisea, Perú">
