ESTO SE VA A DESCONTROLAR

--- a/huevo.html
+++ b/huevo.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>GHM - Biografía Huevo</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/huevo.css">
+	<link rel="stylesheet" type="text/css" href="css/fotografia.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -98,64 +98,68 @@
 	</header>
 	
 	<div>
-		<img src="img/BIOGRAFIA-HUEVO-01.jpg" class="img-fluid">
+		<img src="img/BIOGRAFIA-HUEVO-01.jpg" class="d-none d-md-block img-fluid">
+		<img src="img/BIOGRAFIA-HUEVO.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio">
 		<div class="row justify-content-center">
-			<div class="col-12 col-lg-10 text-center">
-				<h1 class="titulo">Gustavo Muñoz Lorenzo</h1>
-				<p class="texto">Gustavo Muñoz Lorenzo o “Huevo”, como lo conocen algunos, nació el 13 de mayo de 1973. Fotógrafo y camarógrafo, desempeña su profesión alternando sus tareas como director de ghm contenidos, empresa que fundó en 1993. En sus más de veinte años de trayectoria, ha incursionado en televisión, la realización audiovisual y editorial.<br>Tres veces ganador del FUND TV, ha sido premiado en diferentes festivales nacionales e internacionales como el “Festival Internacional de Cine de Montaña” y el “BANFF Mountain Film Festival”, entre otros.</p>
+			<div class="col-12 col-lg-10 text-center container-bio">
+				<h1 class="titulo text-bio">Gustavo Muñoz Lorenzo</h1>
+				<p class="texto text-bio">Gustavo Muñoz Lorenzo o “Huevo”, como lo conocen algunos, nació el 13 de mayo de 1973. <br class="d-block d-sm-none">Fotógrafo y camarógrafo, desempeña su profesión alternando sus tareas como director de ghm contenidos, empresa que fundó en 1993. En sus más de veinte años de trayectoria, ha incursionado en televisión, la realización audiovisual y editorial.<br>Tres veces ganador del FUND TV, ha sido premiado en diferentes festivales nacionales e internacionales como el “Festival Internacional de Cine de Montaña” y el “BANFF Mountain Film Festival”, entre otros.</p>
 			</div>
 		</div>
 	</div>
 
 	<div class="container-fluid">
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="img/video.png" class="img-fluid">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
+				<h2 class="titulo">Lorem ipsum.</h2>
+				<p class="texto">Lorem ipsum dolor sit.</p>
+			</div>
+		</div>
+
+		<div class="row align-items-center">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
+				<h2 class="titulo">Lorem ipsum.</h2>
+				<p class="texto">Lorem ipsum dolor sit.</p>
+			</div>
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
+				<img src="img/video.png" class="img-fluid">
+			</div>
+		</div>
+
+		<div class="row align-items-center">
+			<div class="col-12 col-md-6 order-1 div-sp">
+				<img src="img/video.png" class="img-fluid">
+			</div>
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum.</h2>
 				<p class="texto">Lorem ipsum dolor sit.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum.</h2>
 				<p class="texto">Lorem ipsum dolor sit.</p>
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
 				<img src="img/video.png" class="img-fluid">
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="img/video.png" class="img-fluid">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Lorem ipsum.</h2>
 				<p class="texto">Lorem ipsum dolor sit.</p>
 			</div>
 		</div>
-		<div class="row align-items-center">
-			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
-			</div>
-		</div>
-		<div class="row align-items-center">
-			<div class="col-6 div-sp">
-				<img src="img/video.png" class="img-fluid">
-			</div>
-			<div class="col-6 div-sp">
-				<h2 class="titulo">Lorem ipsum.</h2>
-				<p class="texto">Lorem ipsum dolor sit.</p>
-			</div>
-		</div>
+
 	</div>
 	<!-- Footer -->
 	<footer>
