--- a/fotografia/naturaleza.html
+++ b/fotografia/naturaleza.html
@@ -98,87 +98,94 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-NATURALEZA-01.jpg" class="img-fluid">
+		<img src="../img/FOTOGRAFIA-NATURALEZA-01.jpg" class="d-none d-md-block img-fluid">
+		<img src="../img/FOTOGRAFIA-NATURALEZA.jpg" class="d-block d-md-none img-fluid">
+	</div>
+
+	<div class="container bio d-block d-md-none">
+		<div class="row justify-content-center">
+			<div class="col-12 col-lg-10 text-center container-bio">
+				<h1 class="titulo text-bio">Lago Caviahue, Neuquén</h1>
+				<p class="texto text-bio">Ubicado en el departamento Ñorquín, es un lago de
+				los más significativos de la cuenca del río Neuquen, y un ambiente único en sudamérica por la extrema acidez de sus aguas.</p>
+			</div>
+		</div>
 	</div>
 
 	<div class="container-fluid">
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-02.jpg" class="img-fluid" alt="Cabo de Hornos">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Cabo de Hornos</h2>
 				<p class="texto">Es una de las Islas Wollaston de Chile, que forman parte del archipiélago de Tierra del Fuego. Para los marinos navegar en ella es uno de los desafíos más grandes.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
 				<h2 class="titulo">Cerro Fitz Roy, Santa Cruz</h2>
 				<p class="texto">Con 3.405 metros de altura, el cerro Fitz Roy aparece como una de las montañas más difíciles de escalar del mundo.</p>
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-03.jpg" class="img-fluid" alt="Cerro Fitz Roy">
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-04.jpg" class="img-fluid" alt="Perú">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Perú</h2>
 				<p class="texto">En Perú no hace falta ir hasta el campo para ver llamas, alpacas, guanacos y vicuñas; incluso circulan por pleno centro de Cusco.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
 				<h2 class="titulo">Camisea, Perú</h2>
 				<p class="texto">Uno de los proyectos que desarrolló la empresa Techint en Perú que consistía en la construcción y tendido de ductos de gas natural.</p>
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-05.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-06.jpg" class="img-fluid">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Tren a las Nubes, Salta</h2>
 				<p class="texto">El tren parte de la ciudad de Salta, atraviesa el Valle de Lerma para introducirse en la Quebrada del Toro y llegar hasta la Puna de Atacama, llegando a más de 4220 msnm de altura.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
 				<h2 class="titulo">La Trochita, Chubut</h2>
 				<p class="texto">Conocido como el Viejo Expreso Patagónico, realiza un servicio turístico entre Esquel y Nahuel Pan y periódicamente hasta El Maitén.</p>
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-07.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-08.jpg" class="img-fluid">
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 div-sp text-container">
 				<h2 class="titulo">Reserva de biósfera San Guillermo, San Juan</h2>
 				<p class="texto">Ubicado en el departamento de Iglesia, tiene el fin de preservar sus características naturales y culturales.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
 				<h2 class="titulo">Valle de Los Patos, San Juan</h2>
 				<p class="texto">Camino que eligió el Gral. San Martín para atravesar la Cordillera, y donde actualmente se realiza la expedición del Cruce de los Andes.</p>
 			</div>
-			<div class="col-6 div-sp">
+			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
 				<img src="../img/FOTOGRAFIA-NATURALEZA-09.jpg" class="img-fluid" alt="Camisea, Perú">
 			</div>
 		</div>
 	</div>
-
-
-
-
 
 	<!-- Footer -->
 	<footer>
