--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>GHM Contenidos</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/flexslider.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -13,9 +14,9 @@
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
 				<div class="col-2 text-right ml-auto">
-					<button id="langEsp" class="lang active">ESP</button>
+					<button id="langEsp" class="lang active">ES</button>
 					<span class="lang">/</span>
-					<button id="langEng" class="lang">ENG</button>
+					<button id="langEng" class="lang">EN</button>
 				</div>
 			</div>
 		</div>
@@ -101,25 +102,34 @@
 	<section class="container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
-				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
-
+<!-- 				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
 					<div class="carousel-inner">
-
 						<div class="carousel-item active">
 							<img class="d-block w-100" src="img/slide1.jpg" alt="">
 						</div>
-
 						<div class="carousel-item">
 							<img class="d-block w-100" src="img/slide2.jpg" alt="">
 						</div>
-
 						<div class="carousel-item">
 							<img class="d-block w-100" src="img/slide3.jpg" alt="">
 						</div>
+					</div>
+				</div> -->
 
+					<div class="flexslider">
+					    <ul class="slides">
+						    <li>
+						      	<img src="img/slide1.jpg" />
+						    </li>
+						    <li>
+						      	<img src="img/slide2.jpg" />
+						    </li>
+						    <li>
+						      	<img src="img/slide3.jpg" />
+						    </li>
+					    </ul>
 					</div>
 					
-				</div>
 			</div>
 		</div>
 	</section>
@@ -127,31 +137,35 @@
 	<!-- Videos -->
 	<section class="videos">
 		<div class="video1">
-			<img src="img/video.png" class="img-fluid">
+			<!-- <img src="img/video.png" class="img-fluid"> -->
+			<video src="video/sarmiento.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
-				<h6 class="titulo">Lorem ipsum #1.</h6>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quo suscipit labore molestias itaque, et vel aspernatur qui in nam rem recusandae officia soluta assumenda voluptatem quia sunt eius autem ea obcaecati molestiae id excepturi repudiandae iusto tempora. Alias ratione, accusantium mollitia possimus, sed minima cupiditate ducimus doloremque deleniti quod earum voluptatibus numquam nihil ipsam enim, porro sint hic.</p>
+				<h6 class="titulo">RELANZAMIENTO WEB SARMIENTO</h6>
+				<p class="texto">El 11 de septiembre del corriente se lanzó el nuevo sitio web de "Los viajes de Sarmiento" presentando nuevas secciones y contenidos.</p>
 			</div>
 		</div>
 		<div class="video2">
-			<img src="img/video.png" class="img-fluid">
+			<!-- <img src="img/video.png" class="img-fluid"> -->
+			<video src="video/perito.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
-				<h6 class="titulo">Lorem ipsum #2.</h6>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatibus repellendus ipsum illum soluta nesciunt id, harum maxime est voluptas necessitatibus facere impedit fugit, quas unde doloremque. Placeat, numquam. Iure quasi quis vitae sunt asperiores dolor dolore, quia amet voluptate molestias, rem libero magni. Vitae nesciunt accusamus, asperiores dolore voluptate..</p>
+				<h6 class="titulo">EL PERITO MORENO</h6>
+				<p class="texto">Adelanto exclusivo de la nueva película que estamos realizando sobre los viajes del Perito Moreno.</p>
 			</div>
 		</div>
 		<div class="video3">
-			<img src="img/video.png" class="img-fluid">
+			<!-- <img src="img/video.png" class="img-fluid"> -->
+			<video src="video/mustang.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
-				<h6 class="titulo">Lorem ipsum #3.</h6>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam dolorum alias, commodi in voluptatum quis magnam deserunt velit. Ipsum, quasi id quo ipsam vel inventore, magni maxime, mollitia odit eaque autem, nam eligendi nemo non dolores repellat eos laborum modi porro. Aliquam corrupti dolorum ad repudiandae tempore neque incidunt sunt, accusantium provident aliquid aut, exercitationem, nostrum molestiae, alias dignissimos expedita repellendus deserunt laboriosam voluptate doloremque qui quas eaque rerum..</p>
+				<h6 class="titulo">PRESENTACIÓN NUEVO FORD MUSTANG | 2017</h6>
+				<p class="texto">Testeamos el nuevo modelo de Mustang durante el rodaje del comercial 2017.</p>
 			</div>
 		</div>
 		<div class="video4">
-			<img src="img/video.png" class="img-fluid">
+			<!-- <img src="img/video.png" class="img-fluid"> -->
+			<video src="video/ballenas.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
-				<h6 class="titulo">Lorem ipsum #4.</h6>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eaque quae accusantium, omnis voluptatum fuga tempora nam adipisci pariatur aliquam. Incidunt quae facere quisquam magnam placeat iste consequatur tenetur quam aspernatur sapiente provident non architecto voluptatibus reiciendis voluptatum numquam illo eum, qui amet similique error quidem odio fugit? Dolor molestiae nesciunt maiores aperiam, amet odio sequi fugiat..</p>
+				<h6 class="titulo">PATAGONIA ARGENTINA</h6>
+				<p class="texto">Recorrido exclusivo por los paisajes más australes de la Patagonia Argentina.</p>
 			</div>
 		</div>
 	</section>
@@ -518,7 +532,21 @@
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.flexslider.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
-
+	<script type="text/javascript">
+		$(document).ready(function() {
+		  $('.flexslider').flexslider({
+		    slideShow: true,
+		    slideshowSpeed: 3000,
+		    pauseOnAction: false,
+		    animation: "slide",
+		    controlNav: false,
+		    directionNav: false,
+		    reverse: true,
+		    useCSS: false
+		  });
+	});
+	</script>
 </body>
 </html>
