--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>GHM Contenidos</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/flexslider.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
@@ -102,34 +101,19 @@
 	<section class="container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
-<!-- 				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
+				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100" src="img/slide1.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="img/slide1.jpg" alt="">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" src="img/slide2.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="img/slide2.jpg" alt="">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" src="img/slide3.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="img/slide3.jpg" alt="">
 						</div>
 					</div>
-				</div> -->
-
-					<div class="flexslider">
-					    <ul class="slides">
-						    <li>
-						      	<img src="img/slide1.jpg" />
-						    </li>
-						    <li>
-						      	<img src="img/slide2.jpg" />
-						    </li>
-						    <li>
-						      	<img src="img/slide3.jpg" />
-						    </li>
-					    </ul>
-					</div>
-					
+				</div>			
 			</div>
 		</div>
 	</section>
@@ -532,21 +516,5 @@
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/jquery.flexslider.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
-		  $('.flexslider').flexslider({
-		    slideShow: true,
-		    slideshowSpeed: 3000,
-		    pauseOnAction: false,
-		    animation: "slide",
-		    controlNav: false,
-		    directionNav: false,
-		    reverse: true,
-		    useCSS: false
-		  });
-	});
-	</script>
 </body>
 </html>
