reemplazo videos .mov por videos .mp4 porque son mas livianos

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	<section class="videos">
 		<div class="video1">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/sarmiento.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<video src="video/sarmiento.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
 				<h6 class="titulo">RELANZAMIENTO WEB SARMIENTO</h6>
 				<p class="texto">El 11 de septiembre del corriente se lanzó el nuevo sitio web de "Los viajes de Sarmiento" presentando nuevas secciones y contenidos.</p>
@@ -146,7 +146,7 @@
 		</div>
 		<div class="video2">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/perito.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<video src="video/perito.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
 				<h6 class="titulo">EL PERITO MORENO</h6>
 				<p class="texto">Adelanto exclusivo de la nueva película que estamos realizando sobre los viajes del Perito Moreno.</p>
@@ -154,7 +154,7 @@
 		</div>
 		<div class="video3">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/mustang.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<video src="video/mustang.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
 				<h6 class="titulo">PRESENTACIÓN NUEVO FORD MUSTANG | 2017</h6>
 				<p class="texto">Testeamos el nuevo modelo de Mustang durante el rodaje del comercial 2017.</p>
@@ -162,7 +162,7 @@
 		</div>
 		<div class="video4">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/ballenas.mov" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<video src="video/ballenas.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
 			<div class="noticia">
 				<h6 class="titulo">PATAGONIA ARGENTINA</h6>
 				<p class="texto">Recorrido exclusivo por los paisajes más australes de la Patagonia Argentina.</p>
