--- a/fotografia/agricultura.html
+++ b/fotografia/agricultura.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>GHM - Fotografía Extremo</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/fotografia.css">
+	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
-<body>
+<body class="fotografia">
 	<!-- Header -->
 	<header class="container-fluid">
 		<div class="container lang-container d-none d-lg-block">
